@@ -69,6 +69,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Date
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -120,6 +130,16 @@ operator|.
 name|util
 operator|.
 name|Set
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Stack
 import|;
 end_import
 
@@ -3768,6 +3788,38 @@ comment|// no configuration of the dependency is required for current confs :
 comment|// it is exactly the same as if there was no dependency at all on it
 continue|continue;
 block|}
+if|if
+condition|(
+name|isDependencyModuleExcluded
+argument_list|(
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+argument_list|,
+name|conf
+argument_list|)
+condition|)
+block|{
+comment|// the whole module is excluded, it is considered as not being part of dependencies at all
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"excluding "
+operator|+
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|+
+literal|" in "
+operator|+
+name|conf
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
 name|IvyNode
 name|depNode
 init|=
@@ -3910,6 +3962,41 @@ block|}
 block|}
 return|return
 name|dependencies
+return|;
+block|}
+specifier|private
+name|boolean
+name|isDependencyModuleExcluded
+parameter_list|(
+name|ModuleRevisionId
+name|dependencyRevisionId
+parameter_list|,
+name|String
+name|conf
+parameter_list|)
+block|{
+return|return
+name|doesCallersExclude
+argument_list|(
+name|getRootModuleConf
+argument_list|()
+argument_list|,
+operator|new
+name|DefaultArtifact
+argument_list|(
+name|dependencyRevisionId
+argument_list|,
+operator|new
+name|Date
+argument_list|()
+argument_list|,
+literal|"ivy"
+argument_list|,
+literal|"ivy"
+argument_list|,
+literal|"xml"
+argument_list|)
+argument_list|)
 return|;
 block|}
 specifier|public
@@ -5767,6 +5854,58 @@ name|Artifact
 name|artifact
 parameter_list|)
 block|{
+return|return
+name|doesCallersExclude
+argument_list|(
+name|rootModuleConf
+argument_list|,
+name|artifact
+argument_list|,
+operator|new
+name|Stack
+argument_list|()
+argument_list|)
+return|;
+block|}
+specifier|private
+name|boolean
+name|doesCallersExclude
+parameter_list|(
+name|String
+name|rootModuleConf
+parameter_list|,
+name|Artifact
+name|artifact
+parameter_list|,
+name|Stack
+name|callersStack
+parameter_list|)
+block|{
+if|if
+condition|(
+name|callersStack
+operator|.
+name|contains
+argument_list|(
+name|getId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|callersStack
+operator|.
+name|push
+argument_list|(
+name|getId
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|Caller
 index|[]
 name|callers
@@ -5844,6 +5983,8 @@ argument_list|,
 name|this
 argument_list|,
 name|artifact
+argument_list|,
+name|callersStack
 argument_list|)
 condition|)
 block|{
@@ -5855,6 +5996,15 @@ block|}
 return|return
 literal|true
 return|;
+block|}
+finally|finally
+block|{
+name|callersStack
+operator|.
+name|pop
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 specifier|private
 name|boolean
@@ -5875,6 +6025,9 @@ name|dependency
 parameter_list|,
 name|Artifact
 name|artifact
+parameter_list|,
+name|Stack
+name|callersStack
 parameter_list|)
 block|{
 comment|// artifact is excluded if it match any of the exclude pattern for this dependency...
@@ -5980,6 +6133,8 @@ argument_list|(
 name|rootModuleConf
 argument_list|,
 name|artifact
+argument_list|,
+name|callersStack
 argument_list|)
 return|;
 block|}
