@@ -2,12 +2,13 @@
 - NEW: a new install task let add modules found in a repository in another one, even transitively (IVY-141)
 - NEW: maven2 pom compatibility: most resolvers are now able to handle m2 pom as project metadata
        and there is a new convertpom task able to convert a pom file to an ivy file (IVY-140)
-- NEW: import configurations from external file (IVY-88)
+- NEW: include configurations from external file (IVY-88)
 - NEW: a new default resolver which let override ivy files and artifacts found on public repository
        (ivyrep / ibiblio) and let publish modules in a local repository (IVY-132)
 - NEW: ivyconf file inclusion in ivyconf files (IVY-99)
 - NEW: macrodef feature in ivyconf for defining macro resolvers with parameters (IVY-98)
 - NEW: conf fallback mechanism (IVY-145)
+- NEW: exclusion now let exclude whole modules (IVY-144)
 - NEW: ability to use a dependency instead of an ivy file in standalone mode (IVY-96)
 - NEW: ability to output a path of dependencies in cache from the standalone mode (IVY-92)
 - NEW: it is now possible to reference existing resolver in resolver containers (IVY-35)
